<resources>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="app_name_release">DreamDroid</string>
    <string name="app_name_debug">dreamDroid DBG</string>
    <string-array name="servicelist_dedicated">
        <item>Bouquets</item>
        <item>Provider</item>
        <item>All Services</item>
    </string-array>
    <string name="timer">Timer</string>
    <string name="service">Service</string>
    <string name="afterevent">Afterevent</string>
    <string name="location">Location</string>
    <string-array name="afterevents">
        <item>Nothing</item>
        <item>Standby</item>
        <item>Deep Standby</item>
        <item>Automatic</item>
    </string-array>
    <string name="vps">VPS</string>
    <string name="vps_note">Requires VPS to be enabled in the receiver\'s VPS settings.</string>
    <string name="vps_date">VPS date</string>
    <string name="vps_time">VPS time</string>
    <string name="begin_time">Begin time</string>
    <string name="repeatings">Repeatings</string>
    <string name="end_time">End time</string>
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="movies">Movies</string>
    <string name="device_info">Device Information</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
    <string name="named_message" translatable="false">%1$s \'%2$s\'</string>
    <string name="zap">Zap</string>
    <string name="browse_epg">Browse EPG</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="epg">EPG</string>
    <string name="epg_list">EPG list</string>
    <string name="epg_prime">Prime</string>
    <string name="epg_timeline">Timeline</string>
    <string name="epg_at_this_time">At this time</string>
    <string name="multiepg">MultiEPG</string>
    <string name="multiepg_now">Now</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="multiepg_today">Today</string>
    <string name="multiepg_empty">No EPG data for this bouquet window.</string>
    <string name="multiepg_timer_record">Recording timer</string>
    <string name="multiepg_timer_zap">Zap timer</string>
    <string name="multiepg_zoom">Visible span</string>
    <string name="multiepg_zoom_hours">%1$dh</string>
    <string name="multiepg_text_size">MultiEPG text size</string>
    <string name="multiepg_text_size_long">Programme titles and channel names in the MultiEPG grid</string>
    <string name="multiepg_text_size_compact">Compact</string>
    <string name="multiepg_text_size_comfortable">Comfortable</string>
    <string name="ssl_enabled">https</string>
    <string name="ssid">Wifi Name</string>
    <string name="port">Port</string>
    <string name="live">Live</string>
    <string name="port_stream_live">Port (Live)</string>
    <string name="port_stream_file">Port (Movies)</string>
    <string name="settings">Settings</string>
    <string name="host_long">Hostname or IP</string>
    <string name="close">Close</string>
    <string name="minutes_short">min.</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="saving">Saving. Please wait&#8230;</string>
    <string name="deleting">Deleting. Please wait&#8230;</string>
    <string name="delete_confirm">Really delete?</string>
    <string name="set_timer">Set Timer</string>
    <string name="reload">Reload</string>
    <string name="recheck">Recheck</string>
    <string-array name="weekdays_short">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="none">None</string>
    <string name="choose_days">Choose days</string>
    <string name="mo_to_fr">Monday to Friday</string>
    <string name="daily">Daily</string>
    <string name="new_timer">New Timer</string>
    <string name="gui_version">GUI version</string>
    <string name="image_version">Image version</string>
    <string name="interface_version">Interface version</string>
    <string name="front_processor_version">Frontprocessor version</string>
    <string name="device_name">Device name</string>
    <string name="frontends">Frontends</string>
    <string name="nics">Network Interfaces</string>
    <string name="hdds">Hard disks</string>
    <string name="hdd_capacity">%1$s (%2$s free)</string>
    <string name="current_event">Current event</string>
    <string name="timeout">Timeout</string>
    <string name="seconds">seconds</string>
    <string name="message_text_hint">Enter your message text</string>
    <string name="send">Send</string>
    <string name="type">Type</string>
    <string-array name="message_types">
        <item>YesNo</item>
        <item>Warning</item>
        <item>Info</item>
        <item>Error</item>
    </string-array>
    <string name="virtual_remote">Virtual Remote</string>
    <string name="login">Login</string>
    <string name="defaultOnNoWifi">Is default profile on no Wifi</string>
    <string name="login_enabled">Enable Login</string>
    <string name="current_service">Now</string>
    <string name="provider">Provider</string>
    <string name="now">Now</string>
    <string name="next">Next</string>
    <string name="epg_search">EPG-Search</string>
    <string name="epg_search_hint">Search EPG</string>
    <string name="epg_search_cached_hint">Offline results: only bouquets opened on this device are searched.</string>
    <string name="epg_search_no_cached_match">No match in the bouquets opened on this device.</string>
    <string name="epg_search_recent">Recent searches</string>
    <string name="epg_search_recent_remove">Remove from recent searches</string>
    <string name="epg_search_prompt">Search programme titles. Results appear as you type.</string>
    <string name="epg_search_back">Back</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="remote_widget_config_title_style">Select the style of the remote control</string>
    <string name="remote_widget_config_title_profile">Select the profile to use with the widget</string>
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
    <string name="no_epg_available">Currently there is no EPG-Information available for this channel!</string>
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="timer_detail_pane_empty">Choose a timer to edit it here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
    <string name="profile_activated">Activated profile</string>
    <string name="profile_not_activated">Error activating profile</string>
    <string name="profile_deleted">Deleted profile</string>
    <string name="profile">Profile</string>
    <string name="auto_switch_profile_wifi_based">Auto Profile switch</string>
    <string name="auto_switch_profile_wifi_based_long">Automatically switch profile based on Wifi connection</string>
    <string name="reset_cache">Reset cache</string>
    <string name="reset_cache_long">Clear the offline cache for this profile or all profiles</string>
    <string name="reset_cache_current">Current profile</string>
    <string name="reset_cache_all">All profiles</string>
    <string name="reset_cache_done">Cache reset</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_updated">Updated profile</string>
    <string name="profile_added">Added profile</string>
    <string name="profile_add">Add Profile</string>
    <string name="no_list_item">No items to display&#8230;</string>
    <string name="tags">Tags</string>
    <string name="screenshot">Screenshot</string>
    <string name="host_empty">The host name cannot be empty!</string>
    <string name="standby">Standby</string>
    <string name="restart_gui">Restart GUI</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="powercontrol">Power Control</string>
    <string name="choose_tags">Choose tags</string>
    <string name="bouquet_overview">Bouquet overview</string>
    <string name="set_default">Set as default</string>
    <string name="default_bouquet_set_to">Default bouquet has been set to: </string>
    <string name="default_bouquet_not_set">Default bouquet could not be set!</string>
    <string name="default_bouquet_set_to_name" translatable="false">%1$s \'%2$s\'</string>
    <string name="loading">Loading&#8230;</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="stream">Stream</string>
    <string name="sleeptimer">Sleep Timer</string>
    <string name="enable_volume_control">Enable Volume Control</string>
    <string name="enable_volume_control_long">Enable direct Volume Control using H/W-Buttons</string>
    <string name="download">Download</string>
    <string name="profiles">Profiles</string>
    <string name="enable_instant_zap">Instant zap</string>
    <string name="enable_instant_zap_long">Instant zap when short-tapping a service</string>
    <string name="mobile_imdb">Use mobile version of imdb.com</string>
    <string name="mobile_imdb_long">Use m.imdb.com instead of www.imdb.com</string>
    <string name="signal_meter">Signal Meter</string>
    <string name="confirm_app_close">Ask for confirmation before app exits</string>
    <string name="confirm_app_close_long">Ask for confirmation before the app is being closed when pressing &quot;back&quot;</string>
    <string name="appearance">Appearance</string>
    <string name="usability">Useability</string>
    <string name="use_picons">Use Picons</string>
    <string name="use_picons_long">Enable the use of picons in certain areas.\nRequires picons in app storage (picons/)</string>
    <string name="sync_picons">Sync Picons</string>
    <string name="sync_picons_long">Sync Picons into app storage using the currently configured connection profile</string>
    <string name="sync_picons_path">Picons - remote path</string>
    <string name="sync_picons_path_long">Path where the Picons on your dreambox reside</string>
    <string name="enable_animations_long">Enable additional view animations</string>
    <string name="enable_animations">Enable animations</string>
    <string name="use_name_as_picon_filename_long">Use service name as file name for picons</string>
    <string name="use_name_as_picon_filename">Picons by service name</string>
    <string name="picons">Picons</string>
    <string name="next_event">Next Event</string>
    <string name="tools">Tools</string>
    <string name="backup_export">Export</string>
    <string name="backup_import">Import</string>
    <string name="backup_profiles">Profiles</string>
    <string name="backup_export_settings">App settings</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
</resources>