<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false"/>
        <item
            android:id="@+id/control_header"
            android:title="@string/control">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_navigation_services"
                        android:checked="false"
                        android:icon="?attr/ic_menu_services"
                        android:title="@string/services"/>
                    <item
                        android:id="@+id/menu_navigation_epg"
                        android:checked="false"
                        android:icon="?attr/ic_menu_epg"
                        android:title="@string/epg"/>
                    <item
                        android:id="@+id/menu_navigation_movies"
                        android:checked="false"
                        android:icon="?attr/ic_menu_movie"
                        android:title="@string/movies"/>
                    <item
                        android:id="@+id/menu_navigation_timer"
                        android:checked="false"
                        android:icon="?attr/ic_menu_timer"
                        android:title="@string/timer"/>
                    <item
                        android:id="@+id/menu_navigation_remote"
                        android:checked="false"
                        android:icon="?attr/ic_menu_remote"
                        android:title="@string/virtual_remote"/>
                    <item
                        android:id="@+id/menu_navigation_current"
                        android:checked="false"
                        android:icon="?attr/ic_menu_current"
                        android:title="@string/current_event"/>
                    <item
                        android:id="@+id/menu_navigation_power"
                        android:checked="false"
                        android:icon="?attr/ic_menu_power_off"
                        android:title="@string/powercontrol"/>
                    <item
                        android:id="@+id/menu_navigation_mediaplayer"
                        android:checked="false"
                        android:icon="?attr/ic_menu_music"
                        android:title="@string/mediaplayer"/>
                    <item
                        android:id="@+id/menu_navigation_zap"
                        android:checked="false"
                        android:icon="?attr/ic_menu_zap"
                        android:title="@string/zap"/>
                    <item
                        android:id="@+id/menu_navigation_sleeptimer"
                        android:checked="false"
                        android:icon="?attr/ic_menu_sleeptimer"
                        android:title="@string/sleeptimer"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/tools_header"
            android:title="@string/tools">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_navigation_screenshot"
                        android:checked="false"
                        android:icon="?attr/ic_menu_picture"
                        android:title="@string/screenshot"/>
                    <item
                        android:id="@+id/menu_navigation_device_info"
                        android:checked="false"
                        android:icon="?attr/ic_menu_device"
                        android:title="@string/device_info"/>
                    <item
                        android:id="@+id/menu_navigation_message"
                        android:checked="false"
                        android:icon="?attr/ic_menu_mail"
                        android:title="@string/send_message"/>
                    <item
                        android:id="@+id/menu_navigation_signal"
                        android:checked="false"
                        android:icon="?attr/ic_menu_signal"
                        android:title="@string/signal_meter"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/settings_about_header"
            android:title="@string/settings_and_about">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_navigation_settings"
                        android:checked="false"
                        android:icon="?attr/ic_menu_settings"
                        android:title="@string/settings"/>
                    <item
                        android:id="@+id/menu_navigation_about"
                        android:checked="false"
                        android:icon="?attr/ic_menu_about"
                        android:title="@string/about"/>
                    <item
                        android:id="@+id/menu_navigation_changelog"
                        android:checked="false"
                        android:icon="?attr/ic_menu_changelog"
                        android:title="@string/changelog"/>
                </group>
            </menu>
        </item>
    </group>
</menu>
