<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/cardBackgroundColor"
    android:fitsSystemWindows="@bool/requireTranslucentStatusbar"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:textColor="?attr/colorOnBackground">

    <TextView
        android:id="@+id/remote_widget_config_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="?attr/colorPrimary"
        android:text="@string/remote_widget_config_title_style"
        android:textColor="?attr/colorOnPrimary" />

    <RadioGroup
        android:id="@+id/remote_widget_style_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/remote_widget_style_simple"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/quickzap" />

        <RadioButton
            android:id="@+id/remote_widget_style_full"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/standard" />
    </RadioGroup>

    <TextView
        android:id="@+id/remote_widget_config_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="?attr/colorPrimary"
        android:text="@string/remote_widget_config_title_profile"
        android:textColor="?attr/colorOnPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200dp"
        android:minWidth="400dp" />

</LinearLayout>