<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_vert_padding"
        android:paddingLeft="@dimen/content_horz_padding"
        android:paddingRight="@dimen/content_horz_padding"
        android:paddingTop="@dimen/content_vert_padding"
        android:paddingStart="@dimen/content_horz_padding"
        android:paddingEnd="@dimen/content_horz_padding">

        <EditText
            android:id="@+id/EditTextMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/message_text_hint">
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/TextViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/type"
                android:layout_marginEnd="8dp"/>

            <Spinner
                android:id="@+id/SpinnerMessageType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/message_types"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/TextViewTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/timeout"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/EditTextTimeout"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:text="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/seconds"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>