<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/backup_import" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonImport"
        android:text="@string/backup_export" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonExport"
        android:layout_marginTop="-3dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/content_horz_padding"
        android:paddingLeft="@dimen/content_horz_padding"
        android:paddingTop="@dimen/content_vert_padding"
        android:paddingEnd="@dimen/content_horz_padding"
        android:paddingRight="@dimen/content_horz_padding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SimpleHeaderMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/backup_profiles" />

            <LinearLayout
                android:id="@+id/layout_backup_profile_dynamic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/layout_backup_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="vertical">

                <TextView
                    style="@style/SimpleHeaderMedium"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/backup_settings" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/backup_export_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backup_export_settings" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>